--- a/subprocess/registration.html
+++ b/subprocess/registration.html
@@ -7,7 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Registration Form</title>
-    
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center content vertically */
+            justify-content: center; /* Center content horizontally */
+            margin: 0; /* Remove default margin */
+        }
+    </style>
 </head>
 
 <body>
