--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Recovery Form</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center content vertically */
+            justify-content: center; /* Center content horizontally */
+            margin: 0; /* Remove default margin */
+        }
+    </style>
 </head>
 
 <body>
@@ -24,7 +33,12 @@
     <!-- <script src="script-rec.js"></script> -->
     <script src="free-text-rec.js"></script>
 
-
+    <span>
+        <p id="title">User Type:</p>
+        <b>
+            <p id="user"></p>
+        </b>
+    </span>
 
 </body>
 
