complete recovery html

--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -29,8 +29,8 @@
         fully satisfactory algorithm is available</p>
     <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
         onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)">
-    <!-- <script src="script.js"></script> -->
-    <!-- <script src="script-rec.js"></script> -->
+        <div></button><button onclick="process()">Continue</button></div>
+
     <script src="free-text-rec.js"></script>
 
     <span>
