remove text in registration

--- a/subprocess/registration.html
+++ b/subprocess/registration.html
@@ -42,12 +42,12 @@
     <a href="login.html">Go to login page</a>
     <script src="free-text-new.js"></script>
 
-    <span>
+    <!-- <span>
         <p id="title">User Type:</p>
         <b>
             <p id="user"></p>
         </b>
-    </span>
+    </span> -->
 
 
     </span>
