--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -11,9 +11,14 @@
         body {
             display: flex;
             flex-direction: column;
-            align-items: center; /* Center content vertically */
-            justify-content: center; /* Center content horizontally */
-            margin: 0; /* Remove default margin */
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+        }
+
+        .row {
+            display: flex;
+            justify-content: space-between;
         }
     </style>
 </head>
@@ -29,16 +34,16 @@
         fully satisfactory algorithm is available</p>
     <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
         onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)">
-        <div></button><button onclick="process()">Continue</button></div>
+    <div></button><button onclick="process()">Continue</button></div>
 
     <script src="free-text-rec.js"></script>
 
-    <span>
+    <div class="row">
         <p id="title">User Type:</p>
         <b>
             <p id="user"></p>
         </b>
-    </span>
+    </div>
 
 </body>
 
