al hamdulillah sucessfully fetch data

--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -30,8 +30,7 @@
         <input type="text" name="recover-input-email" id="recover-input-email">
     </div>
     <p>*Type to reset password</p>
-    <p>The discipline of machine learning employes various approaches to teach computers to accomplish tasks where no
-        fully satisfactory algorithm is available</p>
+    <p>Machine learning is a type of artificial intelligence focused on building computer systems that learn from data</p>
     <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
         onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)">
     <div></button><button onclick="process()">Continue</button></div>
