complete project before demonstration

--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -20,30 +20,54 @@
             display: flex;
             justify-content: space-between;
         }
+        .center{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 1;
+            padding: 1;
+        }
+             .center-image {
+            position: relative;
+        }
     </style>
 </head>
 
 <body>
     <p class="header">ACCOUNT RECOVERY FORM</p>
+    <img src="keystroke.png" alt="Centered Image" class="center-image">
+    <h3>Enter your email account</h3> 
+
     <div class="row">
-        <p>*E-mail</p>
+        <p>E-mail</p>
         <input type="text" name="recover-input-email" id="recover-input-email">
     </div>
-    <p>*Type to reset password</p>
-    <p>Machine learning is a type of artificial intelligence focused on building computer systems that learn from data</p>
-    <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
-        onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)">
-    <div></button><button onclick="process()">Continue</button></div>
-
+    <div >
+        <p>Type the below sentence without quote to recognize your typing pattern and send you recovery password mail</p>
+        <p class="input"><b>"Machine learning is a type of artificial intelligence focused on building computer systems that learn from data"</b></p>
+        <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
+            onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)" style="width: 800px; height: 50px;">
+        <div class="center"><button onclick="process()"><b>Continue</b></button></div>
+    
+    </div>
+   
     <script src="free-text-rec.js"></script>
 
     <div class="row">
+        <img src="user.png" style="width: 30px; height: 30px;" alt="User Image" class="center-image">
+
         <p id="title">User Type:</p>
         <b>
             <p id="user"></p>
         </b>
     </div>
 
+    <h3>Other options:</h3>
+    <p>Don't have any account?<a href="registration.html">Register</a></p>
+    <p>Already have any account?<a href="login.html">Login</a></p>
+
+    
 </body>
 
 </html>
