--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -45,8 +45,8 @@
     </div>
     <div >
         <p>Type the below sentence without quote to recognize your typing pattern and send you recovery password mail</p>
-        <p class="input"><b>"Machine learning is a type of artificial intelligence focused on building computer systems that learn from data"</b></p>
-        <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
+        <p class="input"><b>"machine learning is a type of artificial intelligence focused on building computer systems that learn from data"</b></p>
+      <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
             onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)" style="width: 800px; height: 50px;">
         <div class="center"><button onclick="process()"><b>Continue</b></button></div>
     
