complete project without review

--- a/subprocess/registration.html
+++ b/subprocess/registration.html
@@ -33,11 +33,11 @@
         <p>*Confirm Password</p>
         <input type="password" name="reg-input-cpass" id="reg-input-cpass">
     </div>
-    <p>For added security, please type the following sentence in the textbox below and click "Continue"</p>
-    <p>a student of machine learning is clearly related to computational statistics</p>
+    <p>For added security, please type the following sentence in the textbox below, press enter. click "Continue". </p>
+    <p><b>"a student of machine learning is clearly related to computational statistics"</b></p>
 
     <input type="text" name="reg-text-input" id="reg-text-input" onkeyup="keyUpFunc(event)"
-        onkeydown="keyDownFunc(event)" placeholder="Type text here">
+        onkeydown="keyDownFunc(event)" placeholder="Type text here" style="width: 800px; height: 50px;">
     <div></button><button onclick="process()">Continue</button></div>
     <a href="login.html">Go to login page</a>
     <script src="free-text-new.js"></script>
