--- a/subprocess/login.html
+++ b/subprocess/login.html
@@ -33,6 +33,12 @@
         <p>*Password</p>
         <input type="password" name="login-input-pass" id="login-input-pass">
     </div>
+    <p>For added security, please type the following sentence in the textbox below, press enter. click "Continue". </p>
+    <p><b>"a student of machine learning is clearly related to computational statistics"</b></p>
+
+    <input type="text" name="reg-text-input" id="reg-text-input" onkeyup="keyUpFunc(event)"
+        onkeydown="keyDownFunc(event)" placeholder="Type text here" style="width: 800px; height: 50px;">
+    
     <div>
         <button> <a href="recover.html">Forget Password?</a></button>
         <button
