--- a/subprocess/recover.html
+++ b/subprocess/recover.html
@@ -44,16 +44,16 @@
         <input type="text" name="recover-input-email" id="recover-input-email">
     </div>
     <div >
-        <p>Type the below sentence without quote to recognize your typing pattern and send you recovery password mail</p>
+        <p>Type the below sentence without quote to recognize your typing pattern and send you recovery password mail.</p>
         <p class="input"><b>"machine learning is focused on building computer systems that learn from data"</b></p>
-      <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Typing area"
+      <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Type text here"
             onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)" style="width: 800px; height: 50px;">
         <div class="center"><button onclick="process()"><b>Continue</b></button></div>
     
     </div>
    
     <script src="free-text-rec.js"></script>
-
+    <p id="error"></p>
     <div class="row">
         <img src="user.png" style="width: 30px; height: 30px;" alt="User Image" class="center-image">
 
@@ -62,6 +62,7 @@
             <p id="user"></p>
         </b>
     </div>
+   
 
     <h3>Other options:</h3>
     <p>Don't have any account?<a href="registration.html">Register</a></p>
