complete project without review and add image

--- a/subprocess/login.html
+++ b/subprocess/login.html
@@ -25,6 +25,7 @@
 
 <body>
     <p class="header">USER LOGIN FORM</p>
+    <img src="keystroke.png" alt="Centered Image" class="center-image">
     <div class="row">
         <p>*E-mail</p>
         <input type="text" name="login-input-email" id="login-input-email">
