--- a/subprocess/registration.html
+++ b/subprocess/registration.html
@@ -20,6 +20,7 @@
 
 <body>
     <p class="header">USER REGISTRATION FORM</p>
+    <img src="keystroke.png" alt="Centered Image" class="center-image">
     <p>* Required</p>
     <div class="row">
         <p>*E-mail</p>
