complete project with demonstration

--- a/subprocess/login.html
+++ b/subprocess/login.html
@@ -34,7 +34,7 @@
         <p>*Password</p>
         <input type="password" name="login-input-pass" id="login-input-pass">
     </div>
-    <p>For added security, please type the following sentence in the textbox below, press enter. click "Continue". </p>
+    <p>For added security, please type the following sentence in the textbox below & press Enter</p>
     <p><b>"a student of machine learning is clearly related to computational statistics"</b></p>
 
     <input type="text" name="reg-text-input" id="reg-text-input" onkeyup="keyUpFunc(event)"
@@ -48,6 +48,16 @@
                 document.getElementById('login-input-pass').value
             )">Login</button>
     </div>
+    <p>Your Pattern is matched! You can access</p>
+    <div class="row">
+        <img src="user.png" style="width: 30px; height: 30px;" alt="User Image" class="center-image">
+
+        <p id="title">User Type:</p>
+        <b>
+            <p id="user">Geniune</p>
+        </b>
+    </div>
+   
     <script src="script.js"></script>
 
 </body>
