edit login page

--- a/subprocess/login.html
+++ b/subprocess/login.html
@@ -48,13 +48,13 @@
                 document.getElementById('login-input-pass').value
             )">Login</button>
     </div>
-    <p>Your Pattern is matched! You can access</p>
+    <p>Your Pattern is matched! You can access it.</p>
     <div class="row">
         <img src="user.png" style="width: 30px; height: 30px;" alt="User Image" class="center-image">
 
         <p id="title">User Type:</p>
         <b>
-            <p id="user">Geniune</p>
+            <p id="user">Genuine</p>
         </b>
     </div>
    
