add process in login html

--- a/subprocess/login.html
+++ b/subprocess/login.html
@@ -48,17 +48,17 @@
                 document.getElementById('login-input-pass').value
             )">Login</button>
     </div>
-    <p>Your Pattern is matched! You can access it.</p>
+    <p id="message"></p>
     <div class="row">
         <img src="user.png" style="width: 30px; height: 30px;" alt="User Image" class="center-image">
 
         <p id="title">User Type:</p>
         <b>
-            <p id="user">Genuine</p>
+            <p id="user"></p>
         </b>
     </div>
    
-    <script src="script.js"></script>
+    <script src="free-text-login.js"></script>
 
 </body>
 
