--- a/integrate-image/modular.html
+++ b/integrate-image/modular.html
@@ -17,14 +17,16 @@
         }
         .image-container {
             display: inline-block;
-            margin: 10px;
+            margin-left: 30px;
+            margin-right: 30px;
             cursor: pointer;
         }
 
         .image-container img {
-            width: 280px; 
-            height: 240px; 
-            border: 1px solid #ccc; 
+            width: 120px; 
+            height: 100px; 
+            border: 6px solid #fff; 
+
         }
 
         .selected {
@@ -41,14 +43,14 @@
         <p>*E-mail</p>
         <input type="text" name="reg-input-email" id="reg-input-email">
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <p>*Password</p>
         <input type="password" name="reg-input-pass" id="reg-input-pass">
     </div>
     <div class="row">
         <p>*Confirm Password</p>
         <input type="password" name="reg-input-cpass" id="reg-input-cpass">
-    </div>
+    </div> -->
 
     <p>Select 4 image in a sequence. Please remember the sequence. This sequence of image must need for login.</p>
     <p id="image-select"></p>
@@ -133,18 +135,7 @@
                 document.getElementById("image-select").style.color = "green";
             }
          
-            if (selectedImages.length > 4) {
-                // const removedImage = selectedImages.shift();
-                // const parsedUrl = new URL(removedImage);
-                // const pathname = parsedUrl.pathname;
-                // const filename = pathname.split('/').pop();
-
-                // const removedContainer = document.querySelector('img[src="./images/' + filename + '"]').parentNode;
-                // console.log(removedContainer);
-                // removedContainer.classList.remove("selected");
-                alert('You can\'t select more than 4 image. If sequence is wrong then refresh the page');
-
-            }
+           
 
         }
     </script>
