--- a/integrate-image/recover.html
+++ b/integrate-image/recover.html
@@ -1,178 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Recovery Form</title>
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin: 0;
-        }
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+      }
 
-        .row {
-            display: flex;
-            justify-content: space-between;
-        }
-        .center{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin: 1;
-            padding: 1;
-        }
-             .center-image {
-            position: relative;
-        }
-
-        .image-container {
-            display: inline-block;
-            margin: 10px;
-            cursor: pointer;
-        }
-
-        .image-container img {
-            width: 280px; 
-            height: 240px; 
-            border: 1px solid #ccc; 
-        }
-
-        .selected {
-            border: 6px solid green;
-        }
+      .row {
+        display: flex;
+        justify-content: space-between;
+      }
+      .center {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 1;
+        padding: 1;
+      }
+      .center-image {
+        position: relative;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <p class="header">ACCOUNT RECOVERY FORM</p>
-    <img src="keystroke.png" alt="Centered Image" class="center-image">
-    <h3>Enter your email account</h3> 
+    <img src="keystroke.png" alt="Centered Image" class="center-image" />
+    <h3>Enter your email account</h3>
 
     <div class="row">
-        <p>E-mail</p>
-        <input type="text" name="recover-input-email" id="recover-input-email">
-    </div>
-  
-        <p>Select 4 image in a sequence and then type the below sentence without quote to recognize your typing pattern and send you recovery password mail.</p>
-
-        <p id="image-select"></p>
-    <div id="imageGrid">
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-1.png" alt="Image 1">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-2.png" alt="Image 2">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-3.png" alt="Image 3">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-4.png" alt="Image 4">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-5.png" alt="Image 1">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-6.png" alt="Image 2">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-7.png" alt="Image 3">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-8.png" alt="Image 4">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-9.png" alt="Image 1">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-10.png" alt="Image 2">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-11.png" alt="Image 3">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-12.png" alt="Image 4">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-13.png" alt="Image 1">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-14.png" alt="Image 2">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-15.png" alt="Image 3">
-        </div>
-        <div class="image-container" onclick="toggleSelection(this)">
-            <img src="./images/machine-learning-16.png" alt="Image 3">
-        </div>
+      <p>E-mail</p>
+      <input type="text" name="recover-input-email" id="recover-input-email" />
     </div>
 
-        <p class="input"><b>"machine learning is focused on building computer systems that learn from data"</b></p>
-      <input type="text" name="recover-text-input" id="recover-text-input" placeholder="Type text here"
-            onkeyup="keyUpFunc(event)" onkeydown="keyDownFunc(event)" style="width: 800px; height: 50px;">
-        <div class="center"><button onclick="process()"><b>Continue</b></button></div>
-    
- 
-   
+    <p>
+      Type the below sentence without quote to recognize your typing pattern and
+      send you recovery password mail.
+    </p>
+    <p class="input">
+      <b
+        >"machine learning is focused on building computer systems that learn
+        from data"</b
+      >
+    </p>
+    <input
+      type="text"
+      name="recover-text-input"
+      id="recover-text-input"
+      placeholder="Type text here"
+      onkeyup="keyUpFunc(event)"
+      onkeydown="keyDownFunc(event)"
+      style="width: 800px; height: 50px"
+    />
+    <div class="center">
+      <button onclick="process()"><b>Continue</b></button>
+    </div>
+
     <script src="free-text-rec.js"></script>
     <p id="error"></p>
     <div class="row">
-        <img src="user.png" style="width: 30px; height: 30px;" alt="User Image" class="center-image">
+      <img
+        src="user.png"
+        style="width: 30px; height: 30px"
+        alt="User Image"
+        class="center-image"
+      />
 
-        <p id="title">User Type:</p>
-        <b>
-            <p id="user"></p>
-        </b>
+      <p id="title">User Type:</p>
+      <b>
+        <p id="user"></p>
+      </b>
     </div>
-   
 
     <h3>Other options:</h3>
     <p>Don't have any account?<a href="registration.html">Register</a></p>
     <p>Already have any account?<a href="login.html">Login</a></p>
-
-    <script>
-        const selectedImages = [];  
-        function toggleSelection(element) {
-
-            element.classList.toggle("selected");
-
-            const imageUrl = element.querySelector('img').src;
-
-            if (selectedImages.includes(imageUrl)) {
-                selectedImages = selectedImages.filter(item => item !== imageUrl);
-            } 
-            else{
-                selectedImages.push(imageUrl);
-
-            }
-
-            if (selectedImages.length == 4){
-                document.getElementById("image-select").textContent = "You have selected 4 images, now type the text below and click continue.";
-                document.getElementById("image-select").style.color = "green";
-            }
-         
-            if (selectedImages.length > 4) {
-                // const removedImage = selectedImages.shift();
-                // const parsedUrl = new URL(removedImage);
-                // const pathname = parsedUrl.pathname;
-                // const filename = pathname.split('/').pop();
-
-                // const removedContainer = document.querySelector('img[src="./images/' + filename + '"]').parentNode;
-                // console.log(removedContainer);
-                // removedContainer.classList.remove("selected");
-                alert('You can\'t select more than 4 image. If sequence is wrong then refresh the page');
-
-            }
-
-        }
-    </script>
-</body>
-
+  </body>
 </html>
