start to fix second version issue

--- a/integrate-image/login.html
+++ b/integrate-image/login.html
@@ -104,7 +104,7 @@
         <img src="./images/machine-learning-16.png" alt="Image 3" />
       </div>
     </div>
-    <p>
+    <!-- <p>
       For added security, please type the following sentence in the textbox
       below & press Enter
     </p>
@@ -123,7 +123,7 @@
       onkeydown="keyDownFunc(event)"
       placeholder="Type text here"
       style="width: 800px; height: 50px"
-    />
+    /> -->
 
     <div>
       <button><a href="recover.html">Forget Password?</a></button>
@@ -166,7 +166,7 @@
 
         if (selectedImages.length == 4) {
             document.getElementById("image-select").textContent =
-              "Correct Graphical Password. Now type the text below and click login.";
+              "Correct Graphical Password.";
             document.getElementById("image-select").style.color = "green";
 
           // document.getElementById("image-select").textContent =
