--- a/integrate-image/recover.html
+++ b/integrate-image/recover.html
@@ -43,14 +43,11 @@
       <input type="text" name="recover-input-email" id="recover-input-email" />
     </div>
 
-    <p>
-      Type the below sentence without quote to recognize your typing pattern and
-      send you recovery password mail.
-    </p>
+    <p>Type the below sentence</p>
     <p class="input">
       <b
-        >"machine learning is focused on building computer systems that learn
-        from data"</b
+        >"The discipline of machine learning employes various approaches to teach computers to accomplish tasks where no
+        fully satisfactory algorithm is available"</b
       >
     </p>
     <input
