primary bug solve done in 2nd  version issue

--- a/integrate-image/modular.html
+++ b/integrate-image/modular.html
@@ -52,7 +52,7 @@
         <input type="password" name="reg-input-cpass" id="reg-input-cpass">
     </div> -->
 
-    <p>Select 4 image in a sequence. Please remember the sequence. This sequence of image must need for login.</p>
+    <p>Select images (minimum 4) for graphical password.</p>
     <p id="image-select"></p>
     <div id="imageGrid">
         <div class="image-container" onclick="toggleSelection(this)">
@@ -105,8 +105,7 @@
         </div>
     </div>
 
-
-    <p>For added security, please type the following word in the textbox below, press enter. click "Continue". </p>
+    <p>For added security, please type the following word in the textbox below, press enter. click "Continue". <br> </p>
     <p><b>.tieRoanl</b></p>
 
     <input type="text" name="reg-text-input" id="reg-text-input" onkeyup="keyUpFunc(event)"
