--- a/integrate-image/recover.html
+++ b/integrate-image/recover.html
@@ -43,11 +43,11 @@
       <input type="text" name="recover-input-email" id="recover-input-email" />
     </div>
 
-    <p>Type the below sentence</p>
+    <p>Type the below sentence.</p>
     <p class="input">
       <b
-        >"The discipline of machine learning employes various approaches to teach computers to accomplish tasks where no
-        fully satisfactory algorithm is available"</b
+        >the discipline of machine learning employes various approaches to teach computers to accomplish tasks where no
+        fully satisfactory algorithm is available</b
       >
     </p>
     <input
